--- a/web_test/web/WEB-INF/web.xml
+++ b/web_test/web/WEB-INF/web.xml
@@ -4,6 +4,18 @@
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_4_0.xsd"
          version="4.0">
 
+    <!--加载Spring容器-->
+    <!--<context-param>-->
+        <!--<param-name>contextConfigLocation</param-name>-->
+        <!--<param-value>classpath:resource/applicationContext.xml</param-value>-->
+    <!--</context-param>-->
+    <!--<listener>-->
+        <!--<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>-->
+    <!--</listener>-->
+
+
+
+
     <servlet>
         <servlet-name>TestController</servlet-name>
         <servlet-class>controller.TestController</servlet-class>
